--- a/src/main/resources/static/src/Copyright.html
+++ b/src/main/resources/static/src/Copyright.html
@@ -1,3 +1,3 @@
 <body>
-<p style="text-align: center;font-size: smaller;">Copyright ©九点半文化·让创意为品牌服务。联系电话：13551315662</p>
+<p style="text-align: center;font-size: smaller;">Copyright ©九点半文化·让创意为品牌服务<br>联系电话：13551315662</p>
 </body>
